--- a/public/admin.manifest.json
+++ b/public/admin.manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "Deka Admin",
-    "name": "Deka and Associates Admin Panel",
+    "name": "DEKA & ASSOCIATES Admin Panel",
     "icons": [
         {
             "src": "logo.webp",
