--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Deka & Associates",
-  "name": "Deka and Associates",
+  "short_name": "DEKA & ASSOCIATES",
+  "name": "DEKA & ASSOCIATES",
   "icons": [
     {
       "src": "logo.webp",
